Keep a manifest in the order it was emitted
`Set.copyOf` keeps the members and not the order: its iteration order is
salted per JVM run, so the manifest read differently from one run to the
next for no change to the module. Nothing prints it today, and the first
thing that does — a report, a serialisation, a diff of the corpus — would
have been unstable for a reason nothing about the model explains.

Measured: three runs over one `LinkedHashSet` of five names came back in
three different orders.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>